--- a/.xmobarrc
+++ b/.xmobarrc
@@ -1,15 +1,17 @@
-Config { font = "xft:Monospace-12"
+Config { font = "-misc-fixed-*-*-*-*-10-*-*-*-*-*-*-*"
        , bgColor = "#2c2c32"
        , fgColor = "grey70"
-       , position = TopW L 90
+       , position = TopW L 85
+       , lowerOnStart = True
        , commands = [ Run StdinReader
-                    , Run Network "eth0" ["-L","0","-H","32","--normal","white","--high","#a6c292"] 12
-                    , Run Cpu ["-L","3","-H","50","--normal","white","--high","#a6c292"] 12
-                    , Run Memory ["-t","Mem: <usedratio>%"] 12
-                    , Run Swap [] 12
-    		    , Run Date "%a, %Y %b %_d %H:%M" "date" 12
+                    , Run Network "eth0" ["-L","0","-H","32","--normal","white","--high","#a6c292"] 10
+                    , Run Cpu ["-L","3","-H","50","--normal","white","--high","#a6c292"] 10
+                    , Run Memory ["-t","Mem: <usedratio>%"] 10
+                    , Run Swap [] 10
+    		    , Run Date "%a, %Y %b %_d %H:%M" "date" 10
                     ]
        , sepChar = "%"
        , alignSep = "}{"
        , template = "%StdinReader% }{ %cpu% | %memory% * %swap% | %eth0% | <fc=#a6c292>%date%</fc>"
        }
+
